--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h1 >I'M Festus <br> Kiprop</h1>
         </div>
         <div class="buttons">
-          <button  class="btn1"><a  href="#contact">Download Resume</a></button>
+          <button  class="btn1"><a  href="./Assets/images/festus.pdf">Download Resume</a></button>
            <button class="btn2"><a href="#about">Get To Know Me</a></button>
           </div>
         </div>
@@ -86,6 +86,7 @@
         <p>HTML</p>
         <p>CSS</p>
         <p>JavaScript</p>
+        <p>React.js</p>
         
     </div>
     <div class="progress">
@@ -100,8 +101,12 @@
     </div>
     <p>JavaScript</p>
     <div class="container">
-        <div class="js">60%</div>
+        <div class="js">60%</div> 
     </div>
+    <p>React</p>
+    <div class="container">
+      <div class="React">60%</div> 
+  </div>
     </div>
     </div>
   </section>
